[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsecheck"
version = "0.1.0"
description = "PulseCheck - health monitoring service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
